fix: correct z-index for modal close button

--- a/src/app/components/modal/modal.module.css
+++ b/src/app/components/modal/modal.module.css
@@ -11,6 +11,7 @@
 }
 
 .closeBtn {
+    z-index: 1;
     color: #FFFFFF;
     right: 40px;
     top: 54px;
